objects/Product_Offering__c.object
<CustomObject>
    <fields>
        <fullName>Actual_dimensions_of_associated_images__c</fullName>
        <label>Actual dimensions of associated images</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_source_qual_date__c</fullName>
        <label>Alternate source qual date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_sourcing_location__c</fullName>
        <label>Alternate sourcing location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_fuse_blow_method__c</fullName>
        <label>Default fuse blow method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Laser</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_metal_indicator__c</fullName>
        <label>Last metal indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Levels_of_metal_used_for_wiring__c</fullName>
        <label>Levels of metal used for wiring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_source_qual_date__c</fullName>
        <label>Primary source qual date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_sourcing_location__c</fullName>
        <label>Primary sourcing location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Offering_description__c</fullName>
        <label>Product Offering description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Offering_group__c</fullName>
        <label>Product Offering group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>DIGITAL</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
                <value>
                    <fullName>HV</fullName>
                </value>
                <value>
                    <fullName>SiGe</fullName>
                </value>
                <value>
                    <fullName>Image Sensor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>FX14</fullName>
                </value>
                <value>
                    <fullName>LMT Cu08</fullName>
                </value>
                <value>
                    <fullName>LMT Cu65</fullName>
                </value>
                <value>
                    <fullName>Cu45</fullName>
                </value>
                <value>
                    <fullName>LMT Other</fullName>
                </value>
                <value>
                    <fullName>Cu32</fullName>
                </value>
                <value>
                    <fullName>FX07</fullName>
                </value>
                <value>
                    <fullName>FX10</fullName>
                </value>
                <value>
                    <fullName>FX05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiTechnology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Si Technology</label>
        <referenceTo>Si_Technology__c</referenceTo>
        <relationshipLabel>Product Offerings</relationshipLabel>
        <relationshipName>Product_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_limitations__c</fullName>
        <label>Source limitations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_levels_of_metal__c</fullName>
        <label>Total levels of metal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Width_of_Crack_Stop_on_one_side_m__c</fullName>
        <label>Width of Crack Stop on one side (µm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Offering</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Offering_description__c</columns>
        <columns>SiTechnology__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>